--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,18 @@ jobs:
         pip install poetry
         poetry install
 
-    - name: Check domains
+    - name: Check
       run: poetry run python -m check
+    
+- name: switching from HTTPS to SSH
+  run: git remote set-url origin ${{ secrets.ssh }}
+- name: check for changes
+  run: git status
+- name: stage changed files
+  run: git add .
+- name: commit changed files
+  run: git commit -m "Auto updating TODO.txt"
+- name: fetch from master
+  run: git fetch origin master
+- name: push code to master
+  run: git push origin HEAD:master
