--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install poetry
         poetry install
+        pip install requests
 
     - name: Check
       run: poetry run python -m check
