--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
-        poetry install
-        pip install requests
+        python -m pip install requests
 
     - name: Check
-      run: poetry run python -m check
+      run:  python -m check
     
     - name: switching from HTTPS to SSH
       run: git remote set-url origin ${{ secrets.ssh }}
